# docs/swagger.json
@@ -1007,12 +1007,6 @@
         "server.AdminLoginResponse": {
             "type": "object",
             "properties": {
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "username": {
                     "type": "string"
                 }
@@ -1156,12 +1150,6 @@
         "server.TokenListItem": {
             "type": "object",
             "properties": {
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "token": {
                     "type": "string"
                 },
@@ -1187,16 +1175,6 @@
         "server.TokenRequest": {
             "type": "object",
             "properties": {
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "admin",
-                        "reader"
-                    ]
-                },
                 "username": {
                     "type": "string",
                     "example": "alice"
@@ -1206,16 +1184,6 @@
         "server.TokenResponse": {
             "type": "object",
             "properties": {
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "admin",
-                        "reader"
-                    ]
-                },
                 "token": {
                     "type": "string",
                     "example": "a1b2c3d4..."
